# rki-covid-cases

./: CHANGELOG.md  README.md  REGION_ID.md  region_id.md  setup.cfg
.github/workflows/: publish-to-pypi.yml  python-publish.yml
src/rki_covid19csv_parser/: csv_parser.py
src/rki_covid19csv_parser/data/: Bundesland_id.csv  SOURCES.txt
src/rki_covid_cases_pkg/: __init__.py  rki_covid_cases.py
